变更版本3.6.16 添加web插件，mqtt插件，证书有效期10年，添加admin用户，int vhost等操作

--- a/rabbitmq.config
+++ b/rabbitmq.config
@@ -4,12 +4,24 @@
                 { tcp_listeners, [5672] },
                 { ssl_listeners, [5671] },
                 { ssl_options, [
-                    {cacertfile,"/home/testca/cacert.pem"},
-                    {certfile,"/home/server/cert.pem"},
-                    {keyfile,"/home/server/key.pem"},
-                    {verify,verify_peer},
-                    {fail_if_no_peer_cert,true},
-                    {versions, ['tlsv1.2', 'tlsv1.1']}
+                    {cacertfile, "/home/testca/cacert.pem"},
+                    {certfile, "/home/server/cert.pem"},
+                    {keyfile, "/home/server/key.pem"},
+                    {verify, verify_peer},
+                    {fail_if_no_peer_cert, false},
+                    {versions, ['tlsv1.2', 'tlsv1.1', 'tlsv1']}
                 ]}
-        ] }
+        ] },
+        {rabbitmq_management, [{listener, [{port, 15672}]}]},
+        {rabbitmq_mqtt, [{default_user, <<"admin">>},
+                  {default_pass, <<"admin">>},
+                  {allow_anonymous, false},
+                  {vhost, <<"int">>},
+                  {exchange, <<"amq.topic">>},
+                  {subscription_ttl, 1800000},
+                  {prefetch, 10},
+                  {ssl_listeners, [8883]},
+                  {tcp_listeners, [1883]},
+                  {tcp_listen_options, [{backlog, 4096}, {nodelay, true}]}]}
 ].
+
